bug: version mobile

--- a/components/footer/Footer.module.scss
+++ b/components/footer/Footer.module.scss
@@ -171,7 +171,8 @@
     justify-content: end;
 
     @media (max-width: $desktop_xsm) {
-        justify-content: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
 
     img {
